<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:checkable="false"
            android:enabled="false"
            android:title="@string/select_sorting_filter" />
        <item android:title="@string/minimum_cost" />
        <item android:title="@string/delivery_costs" />
        <item android:title="@string/avg_product_price" />
        <item android:title="@string/popularity" />
        <item android:title="@string/distance" />
        <item android:title="@string/rating_average" />
        <item android:title="@string/newest" />
        <item android:title="@string/best_match" />
    </group>
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_icon_title"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
</menu>